--- a/wp-content/themes/portfolio/assets/scss/style.scss
+++ b/wp-content/themes/portfolio/assets/scss/style.scss
@@ -2,6 +2,10 @@
 // Settings
 @import "settings/colors";
 @import "settings/fonts";
+@import "settings/var";
+
+// Tools
+@import "tools/mixins";
 
 
 // Base
