--- a/wp-content/themes/portfolio/assets/scss/base/_base.scss
+++ b/wp-content/themes/portfolio/assets/scss/base/_base.scss
@@ -42,3 +42,12 @@
         }
     }
 }
+
+.contact-links {
+    color: $red;
+    font-size: 16px;
+
+    &:hover {
+        color: $white;
+    }
+}
