--- a/wp-content/themes/portfolio/assets/scss/components/_experience-section.scss
+++ b/wp-content/themes/portfolio/assets/scss/components/_experience-section.scss
@@ -7,6 +7,10 @@
             &:nth-last-of-type(1) {
                 .exp-content {
                     padding-bottom: 0px;
+
+                    @include breakpoint(1000px) {
+                        padding-bottom: 1.5rem;
+                    }
                 }
             }
         }
@@ -23,6 +27,10 @@
             position: absolute;
             top: 0;
             bottom: 0;
+
+            @include breakpoint(1000px) {
+                content: none;
+            }
         }
 
         &.left-con {
@@ -35,6 +43,14 @@
 
             .icon-container {
                 right: -30px;
+
+                @include breakpoint(1000px) {
+                    right: 0;
+                }
+            }
+
+            @include breakpoint(1000px) {
+                text-align: left;
             }
         }
 
@@ -48,6 +64,23 @@
 
             .icon-container {
                 left: -30px;
+
+                @include breakpoint(1000px) {
+                    right: 0;
+                    left: auto;
+                }
+            }
+        }
+
+        @include breakpoint(1000px) {
+            border: 1px solid #111;
+            margin-top: 20px;
+            box-shadow: 2px 2px 1px #111;
+            padding: 2rem 1.5rem 1.5rem;
+            max-width: 100%;
+            flex: 1;
+            &.blank-content {
+                display: none;
             }
         }
     }
@@ -64,6 +97,11 @@
         padding: 2px;
         transform: rotate(45deg);
 
+        @include breakpoint(1000px) {
+            transform: rotate(0);
+            top: 0;
+        }
+
         span {
             position: relative;
             vertical-align: middle;
@@ -74,15 +112,29 @@
         i {
             transform: rotate(-45deg);
             font-size: 1.25rem;
+
+            @include breakpoint(1000px) {
+                transform: rotate(0);
+            }
         }
         
     }
     ul {
         padding-left: 20px;
         padding-right: 20px;
+
+        @include breakpoint(1000px) {
+            direction: ltr;
+        }
     }
 
     h6 {
         font-style: italic;
+    }
+
+    h4 {
+        @include breakpoint(768px) {
+            font-size: 1.3rem;
+        }
     }
 }
