--- a/wp-content/themes/portfolio/assets/scss/components/_hero.scss
+++ b/wp-content/themes/portfolio/assets/scss/components/_hero.scss
@@ -7,6 +7,11 @@
     color: #fff;
     text-align: center;
 
+    @include breakpoint(648px) {
+        height: auto;
+        padding: 3rem 0;
+    }
+
     &:before {
         content: '';
         display: block;
@@ -35,6 +40,18 @@
         font-family: $ultra;
         font-size: 4rem;
         text-shadow: 1px 1px $red;
+
+        @include breakpoint(648px) {
+            font-size: 3rem;
+        }
+
+        @include breakpoint(480px) {
+            font-size: 2.5rem;
+        }
+
+        @include breakpoint(380px) {
+            font-size: 2rem;
+        }
     }
 
     h5 {
@@ -48,6 +65,13 @@
         font-size: 2.5rem;
         font-family: $bebas;
         letter-spacing: 2px;
+
+        @include breakpoint(648px) {
+            font-size: 2rem;
+        }
+        @include breakpoint(480px) {
+            font-size: 1.5rem;
+        }
     }
 
     a {
