--- a/wp-content/themes/portfolio/assets/scss/components/_navigation.scss
+++ b/wp-content/themes/portfolio/assets/scss/components/_navigation.scss
@@ -1,7 +1,61 @@
 header {
     background-color: rgba(17, 17, 17, .8);
     width: 100%;
-    height: 100px;
+    height: 150px;
+    position: relative;
+    padding-top: 30px;
+
+    @include breakpoint(930px) {
+        &.fixed-top {
+            position: relative;
+            top: 0 !important;
+            text-align: center;
+            padding: 30px 0;
+            height: auto;
+            background-color: $black;
+        }
+    }
+
+    .contact-info-con {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        // height: 30px;
+        padding: 4px;
+        background-color: $white;
+        border-bottom: 1px solid $white;
+
+        .contact-links {
+            color: $black;
+
+            &:hover {
+                color: $red;
+            }
+        }
+
+        @include breakpoint(930px) {
+            display: none;
+        }
+    }
+
+    .left-contacts {
+        i {
+            display: inline-block;
+            padding-right: 2px;
+        }
+
+        span {
+            display: inline-block;
+            padding: 0 10px;
+        }
+    }
+
+    .right-contacts {
+        i {
+            margin-right: 10px;
+        }
+    }
 
     .d-table-cell {
         vertical-align: middle;
@@ -25,7 +79,29 @@ header {
         &:hover {
             color: $red;
         }
+
+        @include breakpoint(480px) {
+            font-size: 1.5rem;
+        }
         
+    }
+
+    .mobile-contact-info {
+        display: none;
+
+        @include breakpoint(930px) {
+            display: block;
+
+            a {
+                display: block;
+                color: #fff;
+                margin-bottom: 8px;
+            }
+
+            i {
+                display: none;
+            }
+        }
     }
 
     .main-navigation {
@@ -33,14 +109,37 @@ header {
         padding: 0;
         margin: 0;
 
+        @include breakpoint(930px) {
+            display: none;
+        }
+
         a {
-            padding: .25rem 0 .25rem 2rem;
+            margin: .25rem 0 .25rem 2rem;
             color: $white;
             font-family: $bebas;
-            letter-spacing: 2px;
+            letter-spacing: 5px;
+            position: relative;
+
+            &::after {
+                content: '';
+                display:block;
+                position: absolute;
+                height: 2px;
+                width: 0;
+                margin: 0 auto;
+                background-color: $red;
+                left: 50%;
+                bottom: -5px;
+                transition: ease-in-out 0.2s;
+            }
 
             &:hover {
                 color: $red;
+
+                &::after {
+                    width: 100%;
+                    left: 0;
+                }
             }
         }
 
@@ -55,4 +154,5 @@ header {
         }
 
     }
+
 }
