--- a/wp-content/themes/portfolio/assets/scss/components/_project-section.scss
+++ b/wp-content/themes/portfolio/assets/scss/components/_project-section.scss
@@ -1,4 +1,6 @@
 #projects {
+    text-align: center;
+    
     a {
         color: $white;
         text-transform: uppercase;
@@ -23,6 +25,17 @@
         text-indent: -500px;
         transition: ease-in-out .3s;
         z-index: 2;
+
+
+        @include breakpoint(768px) {
+            top: auto;
+            height: auto;
+            background-color: #111;
+            bottom: 0;
+            text-indent: 0;
+            padding: .5rem 0;
+            font-size: .8rem;
+        }
     }
 
     .d-table-cell {
@@ -32,6 +45,9 @@
 
     span {
         text-decoration: underline;
+        @include breakpoint(768px) {
+            text-decoration: none;
+        }
     }
 
     .projects-con {
@@ -49,6 +65,24 @@
         background-color: #efefef;
         border: 2px solid transparent;
         transition: ease-in-out .3s;
+
+        @include breakpoint(1024px) {
+            padding: 50px;
+        }
+
+        @include breakpoint(768px) {
+            width: 30%;
+            border-radius: 0px;
+            margin: 1rem .5rem 0;
+        }
+
+        @include breakpoint(648px) {
+            width: 40%;
+        }
+        @include breakpoint(480px) {
+            width: 100%;
+            margin: 10px auto 0;
+        }
 
         &::before {
             content: '';
